# ModernPDF

./: .clang-format  .gitignore  CMakeLists.txt  README.md  collect_dependencies.cmake
.github/workflows/: codeql.yml
cmake/: collect_dependencies.cmake  config.hpp.in
examples/: CMakeLists.txt  test.cpp
include/: doc_config.hpp  face.hpp  font.hpp  fontManager.hpp  fonts.hpp  graphics.hpp  page_descriptor.hpp  pdf.hpp  resource_manager.hpp
include/private/: harfbuzz-helpers.hpp  script_language.hpp  util.hpp
include/private/font-tables/: parser.hpp
include/private/types/: font.hpp
src/: CMakeLists.txt  face.cpp  font.cpp  fontManager.cpp  test.cpp
