set(TARGET pdflib)
add_library(${TARGET} STATIC face.cpp font.cpp fontManager.cpp)
target_compile_features(${TARGET} PUBLIC cxx_std_20)
target_link_libraries(${TARGET} PUBLIC ${LIBS} qpdf::libqpdf)
target_compile_options(${TARGET} PUBLIC ${CFLAGS})
target_include_directories(${TARGET} PUBLIC ${PROJECT_SOURCE_DIR}/include ${INCLUDE_DIRS})